--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "my-app",
+  "name": "react-tic-tac-toe",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
   },
+  "homepage": "https://github.com/robertluttig/react-tic-tac-toe.git",
   "scripts": {
+    "predeploy": "npm run build",
     "start": "react-scripts start",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
